--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -77,6 +77,7 @@
             android:layout_marginStart="8dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_get_started"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/get_started"
