--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="quickies_blue">#0D99FF</color>
     <color name="purple_text">#5C6DC5</color>
+    <color name="black_user_message">#312B2B</color>
+    <color name="white_bot_message">#F4F4F4</color>
 </resources>
