--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -11,6 +11,14 @@
         layout="@layout/item_chat_toolbar"/>
 
     <ImageView
+        android:id="@+id/transparent_black_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_black"
+        android:contentDescription="@string/info"
+        android:visibility="invisible"/>
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
