--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="purple_text">#5C6DC5</color>
     <color name="black_user_message">#312B2B</color>
     <color name="white_bot_message">#F4F4F4</color>
+    <color name="transparent_black">#4D242424</color>
 </resources>
